[tool.poetry]
name = "tracedump"
version = "0.0.1"
description = ""
authors = ["Mic92 <dontcontactme@example.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = ">= 3.8"
cffi = ">= 1.1.0"
pwntools = { url = "https://github.com/hase-project/pwntools/archive/59fbeb767ede61c8a54292daad3fa07cb996b805.zip" }

[tool.poetry.scripts]
tracedumpd = 'tracedump.tracedumpd.__main__:main'

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools>=30.0.0"
]
build-backend = "poetry.core.masonry.api"
